--- a/style.css
+++ b/style.css
@@ -9,7 +9,11 @@ p {
 .voiture {
   width: 250px;
   height: 108px;
-  background: red;
+  padding: 50px;
+  margin: 50px;
+  background-image: url(voiture.png);
+  background-size: 350px 205px;
+  background-attachment: local;
   position: relative;
-  border-radius: 30px;
+  
 }
